Fixed missing login button on mobile

--- a/public/assets/css/noscript.css
+++ b/public/assets/css/noscript.css
@@ -36,13 +36,5 @@
     nav[aria-label="Main navigation"]>#mobile-menu-toggle {
       display: none;
     }
-
-    nav[aria-label="Main navigation"]>#user-actions>a[role="button"] {
-      display: inline-flex;
-    }
-
-    nav[aria-label="Main navigation"]>#top-links>[data-mobile-auth]:has(a[href="/login"]) {
-      display: none;
-    }
   }
 }
